# kulikova_d_m

./: .gitignore  CMakeLists.txt  kulikova_d_m.sln
Complex/: Complex.h  Complex.vcxproj.filters  Complex_test.cpp
Complex/Debug/: vc141.idb
Complex/Debug/Complex.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Complex.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: Complex.ilk  Rational.ilk
Rational/: Rational.cpp  Rational.vcxproj  Rational.vcxproj.filters
Rational/Debug/: vc141.idb
kursach/: CMakeLists.txt  dataset.json  kursach.cpp  kursach.h
labs/: CMakeLists.txt  kulikova_d_m.sln
labs/Complex/: CMakeLists.txt  Complex.cpp  Complex.vcxproj  Complex_test.cpp  complex_test.cpp
labs/Rational/: CMakeLists.txt  rational.cpp  rational.h
labs/complex/: complex.cpp  complex.h  complex_test.cpp
labs/dynamic_array/: CMakeLists.txt  dynamic_array.cpp  dynamic_array.h  dynamic_array_test.cpp
labs/dynamic_array_t/: CMakeLists.txt  dynamic_array_t.cpp  dynamic_array_t.h  dynamic_array_t_test.cpp
labs/matrix/: matrix.cpp  matrix.h
labs/matrix_ana/: CMakeLists.txt  matrix_ana.cpp  matrix_ana.h  matrix_ana_test.cpp
labs/priority_queue/: CMakeLists.txt  priority_queue.cpp  priority_queue.h  priority_queue_test.cpp
labs/queue_on_array/: CMakeLists.txt  queue_on_array.cpp  queue_on_array.h  queue_on_array_test.cpp
labs/rational/: CMakeLists.txt  rational.cpp  rational.h  rational_test.cpp
labs/stack_on_list/: CMakeLists.txt  stack_on_list.cpp  stack_on_list.h  stack_on_list_test.cpp
labs/tests/: CMakeLists.txt  complex_test.cpp  dynamic_array_t_test.cpp  dynamic_array_test.cpp  matrix_ana_test.cpp  matrix_test.cpp  priority_queue_test.cpp  queue_on_array_test.cpp  rational_test.cpp  stack_on_list_test.cpp
rational/: rational.h  rational_test.cpp
repos/hometask1/: ht1.bat
(+7 files in other folders)
